Resolves: tdf#93703 0 scaling is CAIRO_STATUS_INVALID_MATRIX

so more drawing to the surface fails

prior to 4ac876084bb89b6460b31e090a666b395f66b1e8 we had
a new cairo context each time to the error was thrown away
along with the context and the new one would work

Change-Id: I90ab1a943e8908e87f391bdfb8ccd5f3818e13d5
(cherry picked from commit f22d153a07231f2d41c7be9ba0e6b7ce963a0762)